@@ -161,6 +161,7 @@
                     <compilerArgs>
                         <!-- <arg>-verbose</arg> -->
                         <arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                     </compilerArgs>                  
 				</configuration>
 			</plugin>
@@ -198,13 +199,13 @@
       			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
 						<id>junit</id>
 						<inherited>true</inherited>
 						<configuration>
-							<argLine>${surefire.argLine}</argLine>
+							<argLine>@{argLine} @{surefire.argLine}</argLine>
 							<testFailureIgnore>${surefire.testFailureIgnore}</testFailureIgnore>				
 							<!-- <parallel>true</parallel> -->
 							<!-- <skipTests>true</skipTests>  -->
